src/charts/BarChart/BarChart.css
/*
 * Chartsy - elegant, customizable, and interactive standalone charts for React
 * Omar Elghoul, 2025
 */

.chartsy-bar-chart {
    --left-margin: 5em;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: last;
    height: 100%;
    border-bottom: 1px solid;
    border-left: 1px solid;
    border-color: transparent;
    padding: 0 1em;
}

.chartsy-bar-has-ylabels {
    margin-left: var(--left-margin)
}

.chartsy-bar-column {
    display: flex;
    flex-direction: row;
    width: 100%;
    position: relative;
}

.chartsy-bar {
    border-top-left-radius: 0.5em;
    border-top-right-radius: 0.5em;
    width: 100%;
    line-height: 0em;
    position: relative;
}

.chartsy-bar-xlabel {
    position: absolute;
    top: calc(100% + 1em);
    text-align: center;
    width: 100%;
    text-overflow: ellipsis;
    overflow: hidden;
    font-size: smaller;
}

.chartsy-bar-ylabel {
    position: absolute;
    left: 0;
    text-align: right;
    width: var(--left-margin);
    text-overflow: clip;
    overflow: hidden;
    font-size: smaller;
    transform: translateY(-0.5em);
}

.chartsy-bar-live:hover .chartsy-bar-column:not(:hover) {
    opacity: 0.6;
}

